# kahan

./: Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile-LIBADD.inc  Makefile.am  kahan-test.pc.in  kahan.c  kahan.h  kahan_test_config  libkahan.c  libkahan.pc.in  libneumaier.c  libneumaier.pc.in  libneumaier_config  main.c  neumaier-test.c  neumaier-test.pc.in  neumaier.c  neumaier.h  neumaier_test_config
